--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <div class="sidelink">
                 <h1>SUMMARIES</h1>
             </div>
+            <div class="sidelink">
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRuhNmpj31iv4RPYFoVkAxr8PYd8N1d2YdIy4xvcM_Ieks-xK-DP6v3eV3LwgoyICoXdBbCAxIQeLtk/pubhtml" target="side" class="side"><h1>WORKBOOK</h1></a>
+            </div>
             <h1 class="sumside"> <a href="summarypages/pe-sums.html" target="side" class="side">>> PE 1097 </a></h1>
             <h1 class="sumside"> <a href="summarypages/physics-sums.html" target="side" class="side">>> PHYSICS 1010 </a></h1>
             <h1 class="sumside"> <a href="summarypages/math-sums.html" target="side" class="side">>> MATH 1050 </a></h1>
